--- a/src/AgilePractices.bib
+++ b/src/AgilePractices.bib
@@ -2,12 +2,57 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Laurent Bossavit at 2011-11-17 15:13:29 +0100 
+%% Created for Laurent Bossavit at 2011-11-20 00:06:37 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{Bird:2011:DTM:2025113.2025119,
+	Acmid = {2025119},
+	Address = {New York, NY, USA},
+	Author = {Bird, Christian and Nagappan, Nachiappan and Murphy, Brendan and Gall, Harald and Devanbu, Premkumar},
+	Booktitle = {Proceedings of the 19th ACM SIGSOFT symposium and the 13th European conference on Foundations of software engineering},
+	Date-Added = {2011-11-20 00:04:04 +0100},
+	Date-Modified = {2011-11-20 00:04:10 +0100},
+	Doi = {http://doi.acm.org/10.1145/2025113.2025119},
+	Isbn = {978-1-4503-0443-6},
+	Keywords = {cco},
+	Location = {Szeged, Hungary},
+	Numpages = {11},
+	Pages = {4--14},
+	Publisher = {ACM},
+	Series = {ESEC/FSE '11},
+	Title = {Don't touch my code!: examining the effects of ownership on software quality},
+	Url = {http://doi.acm.org/10.1145/2025113.2025119},
+	Year = {2011},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/2025113.2025119}}
+
+@inproceedings{Mockus:2000:CSO:337180.337209,
+	Acmid = {337209},
+	Address = {New York, NY, USA},
+	Annote = {Contrary to expectations, ownership on a successful OSS project turns out to be collective rather than exclusive},
+	Author = {Mockus, Audris and Fielding, Roy T. and Herbsleb, James},
+	Booktitle = {Proceedings of the 22nd international conference on Software engineering},
+	Date-Added = {2011-11-19 23:58:59 +0100},
+	Date-Modified = {2011-11-19 23:59:13 +0100},
+	Doi = {http://doi.acm.org/10.1145/337180.337209},
+	Isbn = {1-58113-206-9},
+	Keywords = {cco},
+	Location = {Limerick, Ireland},
+	Numpages = {10},
+	Pages = {263--272},
+	Publisher = {ACM},
+	Series = {ICSE '00},
+	Title = {A case study of open source software development: the Apache server},
+	Url = {http://doi.acm.org/10.1145/337180.337209},
+	Year = {2000},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/337180.337209}}
+
+@misc{cite-key,
+	Date-Added = {2011-11-17 15:24:58 +0100},
+	Date-Modified = {2011-11-17 15:25:15 +0100}}
 
 @incollection{44,
 	Author = {Flor, N. V. and Hutchins, E. L.},
